<resources>
    <string name="app_name">Kitty Games</string>
    <string name="login" translatable="false">Login</string>
    <string name="signup">Sign UP</string>
    <string name="download_completed">New Version Download Completed</string>
    <string name="downloading_new_version">Downloading New Version</string>
    <string name="installing_new_version">Installing New Version</string>
    <string name="findNewVersion_title">Find New Version</string>
    <string name="updateLog">%1$sv%2$s update log: </string>
    <string name="Montserrat_Regular">fonts/Montserrat-Regular.otf</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="hostgame"><u>Host a Game</u></string>
    <string name="kyc"><u>Click here to complete KYC to receive referral commission</u></string>
    <string name="or">OR</string>
    <string name="loginwithfacebook">Login With Facebook</string>
    <string name="howtoplay"><b><u>How to play?</u></b></string>
    <string name="fullname">Full Name</string>
    <string name="mobile">Mobile No.</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="dashboard">Home</string>
    <string name="organize">Organize</string>
    <string name="wallet">Wallet</string>
    <string name="auto_renew">Auto Renew</string>
    <string name="notification">Notification</string>
    <string name="history">History</string>
    <string name="joinbycode">Join By Code</string>
    <string name="ligality">Ligality</string>
    <string name="howtoplay1">How To Play</string>
    <string name="aboutus">About Us</string>
    <string name="tc">Terms &amp; Conditions</string>
    <string name="entryfees">Entry Fees:</string>
    <string name="totaltickets">Total Tickets:</string>
    <string name="totalwinnings">Total Winnings:</string>
    <string name="changepass">Change Password</string>
    <string name="logout">Logout</string>
    <string name="buy">Buy</string>
    <string name="bracketsize">Bracket Size:</string>
    <string name="invitedfriends">Invited Friends:</string>
    <string name="comission">Comission:</string>
    <string name="noofcontest">No. of Contest:</string>
    <string-array name="sortby">
        <item>Till Date</item>
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
        <item>Custome Date</item>
    </string-array>
    <string name="lowtohigh">Price: Low to High</string>
    <string name="hightolow">Price: High to Low</string>
    <string name="mintomax">Contest: Min to Max</string>
    <string name="maxtomin">Contest: Max to Min</string>
    <string name="latetoearly">Time: Late to Early</string>
    <string name="forgotpassword">Forgot Password</string>
    <string name="forgotemail">Enter your register email</string>
    <string name="send">Send</string>
    <string name="resetpassword">Reset Password</string>
    <string name="currentpassword">Current Password</string>
    <string name="newpassword">New Password</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="reset">Reset</string>
    <string name="dummytext">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="price">Price</string>
    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>
    <string name="balance">Balance</string>
    <string name="winnings">Winnings</string>
    <string name="addmoney">Add Money</string>
    <string name="redeem">Redeem</string>
    <string name="passbook">Passbook</string>
    <string name="enterjoincode">Enter Join Code</string>
    <string name="youwon">You Won:</string>
    <string name="enteramount">Enter Amount</string>
    <string name="selectoption">Select Option</string>
    <string name="enterupivpa">Enter UPA VPA</string>
    <string name="accountnumber">Account Number</string>
    <string name="accountname">Account Holder Name</string>
    <string name="ifsccode">IFSC Code</string>
    <string name="amount">Amount</string>
    <string name="amount_debited">Amount debited from wallet :</string>
    <string name="packages_purchesed">Packages purchased :</string>
    <string name="createcontest">Create Contest</string>
    <string name="updatecontest">Update Contest</string>
    <string name="entryfees1">Entry Fees</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="bracketsize1">Bracket Size</string>
    <string name="notifyme2min">Notify me 2 min before game</string>
    <string name="next">Next</string>
    <string name="update">Update</string>
    <string name="invitefriends">Invite Friends</string>
    <string name="done">Done</string>
    <string name="min_text">Minimum</string>
    <string name="max_text">Maximum</string>
    <string name="character_requiredeterr">characters required.</string>
    <string name="congratulations">Congratulation</string>
    <string name="sorry">Sorry</string>
    <string name="crypt_pass">dePQ8#NtBSxUcgHM</string>
    <string name="pay">Pay</string>
    <string name="confirmpay">Confirm &amp; Pay</string>
    <string name="addtowallet">Add to Wallet</string>
    <string name="insuficientbal">Insuficient Balance</string>
    <string name="join">Join</string>
    <string name="hostacontest">Host a contest</string>
    <string name="Redeemjtckt">Redeem J Ticket</string>
    <string name="Myjtckt">My J Ticket</string>
    <string name="WaitingRoom">Waiting Room</string>
    <string name="Automation">Automation</string>
    <string name="forgotpassword1"><b><u>Forgot Password?</u></b></string>
    <string name="paymentsummary">Payment Summary</string>
    <string name="contests">Games</string>
    <string name="yourselection">Your Selection</string>
    <string name="locknow">Lock Now</string>
    <string name="gameresult">Game Result</string>
    <string name="mytickets">My Tickets</string>
    <string name="enter">Enter</string>
    <string name="buymoretickets">Join More tickets</string>
    <string name="ok">Ok</string>
    <string name="addpayment">Add Payment</string>
    <string name="loading">Loading...</string>
    <string name="termscond">T&amp;C</string>
    <string name="viewwinner">View Winners</string>
    <string name="error_cropping_photo">Error Cropping Photo</string>
    <string name="choose_image_source">Choose Image</string>
    <string name="permission_denied_camera">Camera Permission Denied</string>
    <string name="permission_denied_read_storage">Read Storage permission denied</string>
    <string name="cashback">Cashback\nUpto: \u20B9300</string>
    <string name="facebook_app_id">1256161984727361</string>
    <string name="fb_login_protocol_scheme">fb1256161984727361</string>
    <string name="contestname">Contest Name</string>
    <string name="contestmode">Contest Mode</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="moderate">Moderate</string>
    <string name="pro">Pro</string>
    <string name="contesttype">Contest Type</string>
    <string name="flexibar">Flexibar</string>
    <string name="fixbar">Fixbar</string>
    <string name="nooftickets">Number of Tickets</string>
    <string-array name="maxwinners">
        <item>10%</item>
        <item>20%</item>
        <item>30%</item>
        <item>40%</item>
        <item>50%</item>
        <item>60%</item>
    </string-array>
    <string name="ticketdetails">Ticket Details</string>
    <string name="ticketprice">Ticket Price</string>
    <string name="save">Save</string>
    <string name="noofslot">Number of Slot</string>
    <string name="privatecontest">Private Contest</string>
    <string name="privatemode">Private Room</string>
    <string name="JTicket">J Ticket</string>
    <string name="packages">Packages</string>
    <string name="horoscope">Horoscope</string>
    <string name="spinning">Spinning Machine</string>
    <string name="mycontestandpkg">My Contest &amp; Packages</string>
    <string name="share">Share</string>
    <string name="mycontest">My Contests</string>
    <string name="entryfee">Entry Fee</string>
    <string name="participantjoined">Participant\nJoined</string>
    <string name="participant">Participants</string>
    <string name="view">View</string>
    <string name="participantwinner">Participant\nWinner</string>
    <string name="winners">Winners</string>
    <string name="noofcontest1">Number of Contests</string>
    <string name="fixslot">Fixslot</string>
    <string name="entryclosingin">Entries Closing In</string>
    <string name="cancelled">Cancelled</string>
    <string name="validity">Validity</string>
    <string name="unutilizedbal">Unutilized Balance</string>
    <string name="withdrawablebal">Withdrawable Balance</string>
    <string name="transfertowallet">Transfer To Wallet</string>
    <string name="transfertoaccount">Transfer To Account</string>
    <string name="entermobileno">Enter Mobile number</string>
    <string name="otpverification">OTP Verification</string>
    <string name="verify">Verify</string>
    <string name="enterotp">Enter Verification code</string>
    <string name="notificationalert">Notification Alert</string>
    <string name="settings">Settings</string>
    <string name="connecting">Connecting...</string>
    <string name="calculatingmsg">The system is calculating the answer Please wait !!!</string>
    <string name="kycverification">KYC Verification</string>
    <string name="skip"><b><u>Skip</u></b></string>
    <string name="uploadpan">Upload PAN CARD photo</string>
    <string name="enterasperpancard">Full Name as on Pan Card</string>
    <string name="enterpancardno">Pan Card Number</string>
    <string name="submit">Submit</string>
    <string name="dateofbirth">Date of Birth</string>
    <string name="username">UserName</string>
    <string name="linkbankaccount">Link Bank Account</string>
    <string name="enterbankname">Enter Bank Name</string>
    <string name="enterbankaccountnumber">Enter Bank Account Number</string>
    <string name="enterbankifsccode">Enter Bank IFSC Code</string>
    <string name="profile">Profile</string>
    <string name="edit">Edit</string>
    <string name="emailaddress">Email Address</string>
    <string name="mobilenumber">Mobile Number</string>
    <string name="pannumber">PAN Number</string>
    <string name="bankaccount">Bank Account</string>
    <string name="addanotheraccount">Add another account</string>
    <string name="answerrange">Answer Range</string>
    <string name="privateRoom">Private Room</string>
    <string name="createGroup">Create Group</string>
    <string name="joinGroup">Join Group</string>
    <string name="hostGames">Host Games</string>
    <string name="fromutilizedbalance">From Unutilized Balance:</string>
    <string name="fromwithdrawablebalance">From Withdrawable Balance:</string>
    <string name="total">Total:</string>
</resources>