<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#010101"
    android:padding="@dimen/padding_10">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sortby"
        android:textSize="@dimen/fontsize_18"
        android:fontFamily="@font/montserrat_semibold"
        android:textColor="@color/color_login_btn"
        android:padding="@dimen/padding_10"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <androidx.appcompat.widget.AppCompatRadioButton
            android:layout_width="wrap_content"
            android:layout_height="?attr/listPreferredItemHeightSmall"
            android:text="@string/lowtohigh"
            android:textColor="@color/white"
            android:fontFamily="@font/montserrat_medium"
            android:padding="@dimen/padding_10"
            app:buttonTint="@color/color_login_btn"/>

        <androidx.appcompat.widget.AppCompatRadioButton
            android:layout_width="wrap_content"
            android:layout_height="?attr/listPreferredItemHeightSmall"
            android:text="@string/hightolow"
            android:fontFamily="@font/montserrat_medium"
            android:textColor="@color/white"
            android:padding="@dimen/padding_10"
            app:buttonTint="@color/color_login_btn"/>
        <androidx.appcompat.widget.AppCompatRadioButton
            android:layout_width="wrap_content"
            android:layout_height="?attr/listPreferredItemHeightSmall"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/mintomax"
            android:textColor="@color/white"
            android:padding="@dimen/padding_10"
            app:buttonTint="@color/color_login_btn"/>
        <androidx.appcompat.widget.AppCompatRadioButton
            android:layout_width="wrap_content"
            android:layout_height="?attr/listPreferredItemHeightSmall"
            android:text="@string/maxtomin"
            android:textColor="@color/white"
            android:fontFamily="@font/montserrat_medium"
            android:padding="@dimen/padding_10"
            app:buttonTint="@color/color_login_btn"/>
        <androidx.appcompat.widget.AppCompatRadioButton
            android:layout_width="wrap_content"
            android:layout_height="?attr/listPreferredItemHeightSmall"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/latetoearly"
            android:textColor="@color/white"
            android:padding="@dimen/padding_10"
            app:buttonTint="@color/color_login_btn"/>
    </RadioGroup>
</LinearLayout>