<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CreateContestActivity"
    android:background="@color/white">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/color_yellow"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:contentInsetEnd="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetStart="0dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@null"
                android:src="@drawable/ic_arrow"
                android:padding="@dimen/activity_horizontal_margin"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:layout_centerVertical="true"/>

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_toEndOf="@+id/ivBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:lines="1"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@string/createcontest"
                android:textColor="@color/color_424242"
                android:textSize="20sp"
                android:fontFamily="@font/montserrat_semibold"
                 tools:ignore="MissingPrefix"/>

        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_below="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/padding_20"
            android:paddingEnd="@dimen/padding_20"
            android:paddingTop="@dimen/padding_10"
            android:paddingBottom="@dimen/padding_10">


            <EditText
                android:id="@+id/edtContestName"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:textColor="@color/color_424242"
                android:textSize="@dimen/fontsize_18"
                android:hint="@string/contestname"
                android:textColorHint="@color/color_424242"
                android:padding="@dimen/padding_10"
                android:inputType="textCapWords"
                android:imeOptions="actionNext"
                android:maxLines="1"
                android:layout_marginTop="@dimen/margin_10"/>

            <EditText
                android:id="@+id/edtDate"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:textColor="@color/color_424242"
                android:textSize="@dimen/fontsize_18"
                android:hint="@string/date"
                android:textColorHint="@color/color_424242"
                android:padding="@dimen/padding_10"
                android:inputType="text"
                android:imeOptions="actionNext"
                android:maxLines="1"
                android:focusable="false"
                android:clickable="true"
                android:focusableInTouchMode="false"
                android:layout_marginTop="@dimen/margin_10"/>


            <EditText
                android:id="@+id/edtTime"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:textColor="@color/color_424242"
                android:textSize="@dimen/fontsize_18"
                android:hint="@string/time"
                android:textColorHint="@color/color_424242"
                android:padding="@dimen/padding_10"
                android:inputType="text"
                android:imeOptions="actionNext"
                android:maxLines="1"
                android:focusable="false"
                android:clickable="true"
                android:focusableInTouchMode="false"
                android:layout_marginTop="@dimen/margin_10"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contestmode"
                android:textColor="@color/color_a0a0a0"
                android:textSize="@dimen/fontsize_18"
                android:layout_marginTop="@dimen/margin_10"/>

            <RadioGroup
                android:id="@+id/rgGameMode"
                android:layout_width="match_parent"
                android:layout_height="?attr/listPreferredItemHeightSmall"
                android:layout_marginTop="@dimen/margin_10"
                android:layout_marginStart="@dimen/margin_10"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/rbEasy"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/easy"
                    android:layout_weight=".3"
                    android:textSize="@dimen/fontsize_18"
                    android:textColor="@color/color_424242"
                    app:buttonTint="@color/colorPrimary"/>

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/rbMedium"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/moderate"
                    android:layout_weight=".4"
                    android:textSize="@dimen/fontsize_18"
                    android:textColor="@color/color_424242"
                    app:buttonTint="@color/colorPrimary"/>

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/rbPro"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/pro"
                    android:layout_weight=".3"
                    android:textSize="@dimen/fontsize_18"
                    android:textColor="@color/color_424242"
                    app:buttonTint="@color/colorPrimary"/>
            </RadioGroup>

            <LinearLayout
                android:id="@+id/linearAnswer"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginTop="@dimen/margin_10"
                android:background="@drawable/edittext_line"
                android:padding="@dimen/padding_10">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/answerrange"
                    android:textSize="@dimen/fontsize_18"
                    android:gravity="center_vertical"
                    android:textColor="@color/color_424242"/>

                <Spinner
                    android:id="@+id/spinnerAnswer"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:spinnerMode="dialog"
                    android:background="@color/white"/>
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/arrow"
                    android:layout_gravity="center"/>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contesttype"
                android:textColor="@color/color_a0a0a0"
                android:textSize="@dimen/fontsize_18"
                android:layout_marginTop="@dimen/margin_10"/>

            <RadioGroup
                android:id="@+id/rgType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10"
                android:layout_marginStart="@dimen/margin_10"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/rbFlexi"
                    android:layout_width="wrap_content"
                    android:layout_height="?attr/listPreferredItemHeightSmall"
                    android:text="@string/flexibar"
                    android:textSize="@dimen/fontsize_18"
                    android:textColor="@color/color_424242"
                    app:buttonTint="@color/colorPrimary"/>

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/rbFixbar"
                    android:layout_width="wrap_content"
                    android:layout_height="?attr/listPreferredItemHeightSmall"
                    android:text="@string/fixslot"
                    android:textSize="@dimen/fontsize_18"
                    android:textColor="@color/color_424242"
                    app:buttonTint="@color/colorPrimary"
                    android:layout_marginStart="@dimen/margin_10"/>

            </RadioGroup>


            <LinearLayout
                android:id="@+id/linearNoTickets"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginTop="@dimen/margin_10"
                android:background="@drawable/edittext_line"
                android:padding="@dimen/padding_10">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/noofcontest1"
                    android:textSize="@dimen/fontsize_18"
                    android:gravity="center_vertical"
                    android:textColor="@color/color_424242"/>

                <Spinner
                    android:id="@+id/spinnerNoTickets"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:entries="@array/notickets"
                    android:spinnerMode="dialog"
                    android:background="@color/white"/>
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/arrow"
                    android:layout_gravity="center"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/linearMaxWinners"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginTop="@dimen/margin_10"
                android:background="@drawable/edittext_line"
                android:padding="@dimen/padding_10">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/maxwinners"
                    android:textSize="@dimen/fontsize_18"
                    android:gravity="center_vertical"
                    android:textColor="@color/color_424242"/>

                <Spinner
                    android:id="@+id/spinnerMaxWinners"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:entries="@array/maxwinners"
                    android:spinnerMode="dialog"
                    android:background="@color/white"/>
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/arrow"
                    android:layout_gravity="center"/>
            </LinearLayout>

            <CheckBox
                android:id="@+id/chkNotify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10"
                android:text="@string/notifyme2min"
                android:textSize="@dimen/fontsize_16"
                android:textColor="@color/color_424242"
                android:padding="@dimen/padding_10"
                android:button="@drawable/select_checkbox_drawable"/>

            <Button
                android:id="@+id/btnNext"
                android:layout_width="match_parent"
                android:layout_height="?attr/listPreferredItemHeightSmall"
                android:layout_marginTop="@dimen/margin_20"
                android:layout_marginBottom="@dimen/margin_20"
                android:background="@drawable/btn_login_new"
                android:text="@string/next"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"/>
        </LinearLayout>
    </ScrollView>


</RelativeLayout>