<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:padding="@dimen/padding_10">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/amount"
        android:textSize="@dimen/_16sdp"
        android:fontFamily="@font/montserrat_semibold"
        android:textColor="@color/color_212121"
        android:layout_gravity="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin_20">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fromutilizedbalance"
            android:fontFamily="@font/montserrat_medium"
            android:textColor="@color/color_212121"
            android:textSize="@dimen/_14sdp"/>

        <TextView
            android:id="@+id/tvPrimaryAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_212121"
            android:fontFamily="@font/montserrat_medium"
            android:textSize="@dimen/_15sdp"
            tools:text="500" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin_10">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:layout_weight="1"
            android:text="@string/fromwithdrawablebalance"
            android:textColor="@color/color_212121"
            android:textSize="@dimen/_14sdp"/>

        <TextView
            android:id="@+id/tvSecondaryAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            tools:text="1000"
            android:textColor="@color/color_212121"
            android:textSize="@dimen/_15sdp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin_10">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/total"
            android:fontFamily="@font/montserrat_medium"
            android:textColor="@color/color_212121"
            android:textSize="@dimen/_14sdp"
            android:gravity="end"
            android:layout_marginEnd="@dimen/margin_5"/>

        <TextView
            android:id="@+id/tvTotalAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            tools:text="1000"
            android:textColor="@color/color_212121"
            android:textSize="@dimen/_15sdp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="@dimen/margin_10"
        android:layout_marginBottom="@dimen/margin_10">
        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/margin_30"
            android:text="@string/cancel"
            android:textSize="@dimen/_14sdp"
            android:textAllCaps="false"
            android:fontFamily="@font/montserrat_semibold"
            android:textColor="@color/color_212121"
            android:background="@drawable/colorprimary_stock"/>

        <Button
            android:id="@+id/btnOk"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/margin_30"
            android:text="@string/ok"
            android:textSize="@dimen/_14sdp"
            android:textAllCaps="false"
            android:fontFamily="@font/montserrat_semibold"
            android:textColor="@color/white"
            android:background="@drawable/bg_colorprimary"
            android:layout_marginStart="@dimen/margin_10"/>
    </LinearLayout>
</LinearLayout>